--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -5,6 +5,12 @@
         android:id="@+id/go_to_home"
         android:title="@string/title_activity_home"/>
     <item
+        android:id="@+id/go_to_profile"
+        android:title="@string/title_activity_profile" />
+    <item
         android:id="@+id/go_to_formation_list"
         android:title="@string/title_activity_formation_list" />
+    <item
+        android:id="@+id/go_to_students"
+        android:title="@string/title_activity_students" />
 </menu>
